stack-overflow: fix background for askubuntu.com

--- a/styles/stack-overflow/catppuccin.user.less
+++ b/styles/stack-overflow/catppuccin.user.less
@@ -107,6 +107,10 @@
 
     color-scheme: if(@flavor = latte, light, dark);
 
+    body {
+      background-image: none;
+    }
+
     ::selection {
       background-color: fade(@accent, 30%);
     }
